remove some local simple saml stuff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3'
 services:
   sites_test:
     ## to connect for wp-cli run `docker-compose exec --user=www-data sites_test /bin/bash`
     ## for all other connections run `docker-compose exec sites_test /bin/bash`
     ## for php unit `bin/install-wp-tests.sh wordpress_test root root wpdb latest`
     ## image: localhost/wordpress:latest
-    image: localhost/wordpress:latest
+    image: localhost/wordpress-php8:latest
     external_links:
       - 'db:mysql'
     restart: always
@@ -18,12 +17,10 @@ services:
     networks:
       - localhost_local_traefik
     environment: 
-      - DB_NAME=simplesaml
       - DB_HOST=wpdb
       - DB_USER=root
       - DB_PASSWORD=root
       - DB_PORT=4306
-      - SAML_AUTOLOAD_PATH=/vendor/simplesamlphp/simplesamlphp/lib/_autoload.php
       - LOCAL_SAML_STORE_DSN=mysql:host=wpdb.localhost_local_traefik;dbname=simplesaml
       - DOCROOT=/var/www/html/web
       - WP_TESTS_PHPUNIT_POLYFILLS_PATH=/var/www/html/vendor/yoast/phpunit-polyfills
